--- a/style.css
+++ b/style.css
@@ -39,12 +39,12 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 6rem;
-  font-size: 1.3rem;
+  height: 3.5rem;
+  font-size: 0.8rem;
 }
 
 .main-nav .logo {
-  width: 11rem;
+  width: 7rem;
 }
 
 .main-nav ul {
@@ -75,27 +75,30 @@ ul {
 .menu-btn {
   cursor: pointer;
   position: absolute;
-  top: 2.5rem;
+  top: 1.2rem;
   right: 3rem;
   z-index: 2;
   display: none;
 }
 
 .btn {
+  width: 8rem;
   margin-top: 1rem;
-  background: #262626;
+  background: #000000;
   color: white;
-  padding: 0.7rem 1rem;
+  padding: 0.5rem 1.5rem;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  font-weight: bold;
 }
 
 /* SHOWCASE*/
 .showcase {
+  list-style: none;
   width: 100%;
-  height: 35rem;
-  background: url("./img/slide1.png") no-repeat center center/cover;
+  height: 27rem;
+  background: url("./img/1.png") no-repeat center center/cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -103,39 +106,89 @@ ul {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  padding: 5rem;
+  padding: 3.7rem;
   font-size: 1.1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.8rem;
 }
 
-.showcase h2,
+.showcase .l {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  float: right;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  border-radius: 100%;
+  margin-right: -3.5rem;
+  margin-top: 7rem;
+  border: 1px solid #afafaf;
+}
+
+.showcase .r {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  float: left;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  border-radius: 100%;
+  margin-left: -3.5rem;
+  margin-top: 7rem;
+  border: 1px solid #afafaf;
+}
+
+.showcase h2 {
+  width: 40%;
+  font-size: 1.5rem;
+  margin: -4rem 0 0.5rem 0;
+}
+
 .showcase p {
-  margin-bottom: 1rem;
+  font-size: 1rem;
+  width: 46%;
+}
+
+/* SHOWCASE2*/
+.showcase2 {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  width: 50%;
+  height: 10rem;
+  list-style: none;
+  font-size: 1rem;
+  margin: 4rem 25% 0 25%;
+}
+
+.showcase2 li {
+  width: 70%;
+  margin: auto;
+  text-align: center;
+  font-weight: bold;
+}
+
+.showcase2 a:hover {
+  border-bottom: 1px solid #262626;
 }
 
 /* Home cards*/
 .home-cards {
   display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   -ms-grid-columns: 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 }
 
 .home-cards img {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
 }
 
 .home-cards h3 {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.3rem;
   font-size: 1.2rem;
 }
 
@@ -144,39 +197,59 @@ ul {
 }
 
 .home-cards a {
-  display: inline-block;
+  display: block;
   text-transform: uppercase;
   color: #0067b8;
   font-weight: bold;
-  padding-top: 1rem;
+  padding-top: 0.5rem;
+  font-size: 1rem;
 }
 
 /*Xbox*/
 .xbox {
   width: 100%;
-  height: 350px;
-  background: url("./img/xbox.png") no-repeat center center/cover;
-  margin-bottom: 2rem;
+  height: 450px;
+  background: url("./img/3.jpg") no-repeat center center/cover;
+  margin-bottom: 3rem;
 }
 
 .xbox .content {
-  width: 50%;
+  width: 100%;
   padding: 2rem 0 0 2rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .xbox .content h2 {
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .xbox .content p {
   margin: 1rem 0 1.2rem;
-  font-size: 1.1rem;
+  font-size: 1rem;
+}
+
+.aa {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
 }
 
 /*Carbon*/
 .carbon {
   width: 100%;
-  height: 350px;
+  height: 320px;
   background: url("./img/carbon.jpg") no-repeat center center/cover;
   margin-bottom: 2rem;
 }
@@ -212,16 +285,17 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 2rem;
+  margin: 4.5rem 0 2rem  0;
 }
 
 .follow p {
-  margin-right: 1.2rem;
-  font-size: large;
+  margin-right: 1rem;
+  font-size: 15px;
+  color: #6e6e6e;
 }
 
 .follow a {
-  margin-right: 1.5rem;
+  margin-right: 1rem;
 }
 
 /*Links*/
@@ -234,13 +308,15 @@ ul {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
+  margin: 0 1.3rem;
 }
 
 .links h3 {
-  font-size: medium;
-  color: grey;
-  margin-bottom: 0.5rem;
+  font-size: 15px;
+  color: #6e6e6e;
+  margin-top: 1.2rem;
   padding-top: 1rem;
 }
 
@@ -259,19 +335,30 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0.5rem 0 1rem 0;
+  margin: 0.5rem 0 0rem 1.5rem;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.footer .ch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
 }
 
 .footer ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  float: right;
-  padding: 0.3rem 0 1rem 1.5rem;
+  width: 55%;
+  padding: 0 0 1rem 1.5rem;
 }
 
-.footer ul li {
-  padding-right: 3.5rem;
+.footer li {
+  padding-right: 2.5rem;
 }
 
 @media (max-width: 700px) {
@@ -317,9 +404,19 @@ ul {
     font-size: 1rem;
     padding: 0.6rem 0.9rem;
   }
+  .showcase h2 {
+    width: 30%;
+  }
+  .showcase p {
+    display: none;
+  }
   .home-cards {
-    grid-template-columns: repeat(2, 1fr);
+    display: -ms-grid;
+    display: grid;
     -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
   }
   .xbox .content {
     width: 50%;
@@ -337,14 +434,20 @@ ul {
   .links .links-inner {
     display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     -ms-grid-columns: 1fr 1fr 1fr;
-    -ms-grid-rows: (1fr)[2];
-        grid-template-rows: repeat(2, 1fr);
-    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
     grid-gap: 20px;
   }
   .footer .footer-inner {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer .footer-inner ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -366,8 +469,12 @@ ul {
     padding: 0.5rem 0.7rem;
   }
   .btn1 .home-cards {
+    display: -ms-grid;
+    display: grid;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
+    -ms-grid-rows: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
   }
   .btn1 .xbox .content p {
     display: none;
@@ -382,10 +489,10 @@ ul {
   .links .links-inner {
     display: -ms-grid;
     display: grid;
-    grid-template-columns: repeat(1, 1fr);
     -ms-grid-columns: 1fr;
-    grid-template-rows: repeat(6, 1fr);
+        grid-template-columns: 1fr;
     -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
   }
   .footer .footer-inner {
