--- a/style.scss
+++ b/style.scss
@@ -32,11 +32,11 @@ ul {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 6rem;
-  font-size: 1.3rem;
+  height: 3.5rem;
+  font-size: 0.8rem;
 
-  .logo {
-    width: 11rem;
+  .logo{
+    width:7rem ;
   }
 
   ul {
@@ -62,57 +62,110 @@ ul {
 .menu-btn{
   cursor: pointer;
   position: absolute;
-  top: 2.5rem;
+  top: 1.2rem;
   right: 3rem;
   z-index: 2;
   display: none;
 }
 
 .btn {
+  width: 8rem;
   margin-top: 1rem;
-  background: #262626;
+  background: #000000;
   color: white;
-  padding: 0.7rem 1rem;
+  padding: 0.5rem 1.5rem;
   cursor: pointer;
   display: inline-block;
-  font-size: 1.2rem;
+  font-size: 1rem;
+  font-weight: bold;
   
 }
 /* SHOWCASE*/
 .showcase {
+  list-style: none;
   width: 100%;
-  height: 35rem;
-  background: url('./img/slide1.png') no-repeat center center/cover;
+  height: 27rem;
+  background: url('./img/1.png') no-repeat center center/cover;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: flex-end;
-  padding: 5rem;
+  padding: 3.7rem;
   font-size: 1.1rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1.8rem;
+  
+  .l{
+    display: flex;
+    float: right;
+    padding: 0.5rem 1rem ;
+    background-color:  white;
+    border-radius: 100%;
+    margin-right: -3.5rem;
+    margin-top:7rem ;
+    border: 1px solid rgb(175, 175, 175);
 
-  h2,
-  p {
-    margin-bottom: 1rem;
+  }
+  .r{
+    display: flex;
+    float: left;
+    padding: 0.5rem 1rem ;
+    background-color:  white;
+    border-radius: 100%;
+    margin-left: -3.5rem;
+    margin-top: 7rem ;
+    border: 1px solid rgb(175, 175, 175);
+
+  }
+  h2{
+    width: 40%;
+    font-size: 1.5rem;
+    margin: -4rem 0 0.5rem 0;
+  }
+
+  p{
+    font-size: 1rem;
+    width: 46%;
+
   }
 
 }
 
+/* SHOWCASE2*/
+.showcase2 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 50%;
+  height: 10rem;
+  list-style: none;
+  font-size: 1rem;
+  margin: 4rem 25% 0 25%;
+
+  li{
+    width: 70%;
+    margin:auto;
+    text-align : center;
+    font-weight: bold ;
+
+  }
+  a:hover {
+    border-bottom: 1px solid #262626;
+  }
+
+}
+
+
 /* Home cards*/
 .home-cards{
   display: grid;
-  grid-template-columns: repeat(4,1fr);
-  -ms-grid-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 20px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 
   img{
     width: 100%;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
   }
 
   h3{
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.3rem;
     font-size: 1.2rem;
   }
 
@@ -121,40 +174,50 @@ ul {
   }
 
   a{
-    display: inline-block;
+    display: block;
     text-transform: uppercase;
     color: #0067b8;
     font-weight: bold;
-    padding-top: 1rem;
+    padding-top: 0.5rem;
+    font-size: 1rem;
 
   }
 }
 /*Xbox*/
 .xbox{
   width: 100%;
-  height: 350px;
-  background: url("./img/xbox.png") no-repeat center center/cover;
-  margin-bottom: 2rem;
+  height: 450px;
+  background: url("./img/3.jpg") no-repeat center center/cover;
+  margin-bottom: 3rem;
 
   .content{
-    width: 50%;
+    width: 100%;
     padding: 2rem 0 0 2rem;
-
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    
     h2{
-      font-size: 2rem;
+      font-size: 1.5rem;
     }
 
     p{
       margin: 1rem 0 1.2rem ;
-      font-size: 1.1rem;
+      font-size: 1rem;
     }
   }
+}
+.aa{
+  font-size: 1.5rem;
+  font-weight:bold;
+  margin-bottom: 1rem;
 }
 
 /*Carbon*/
 .carbon{
   width: 100%;
-  height: 350px;
+  height: 320px;
   background: url("./img/carbon.jpg") no-repeat center center/cover;
   margin-bottom: 2rem;
 
@@ -189,13 +252,14 @@ ul {
 /*Follow*/
 .follow{
   display: flex;
-  margin-bottom: 2rem;
+  margin: 4.5rem 0 2rem  0;
   p{
-    margin-right: 1.2rem;
-    font-size: large;
+    margin-right: 1rem;
+    font-size: 15px;
+    color: rgb(110, 110, 110);
   }
   a{
-    margin-right: 1.5rem;
+    margin-right: 1rem;
   }
 }
 
@@ -203,15 +267,17 @@ ul {
 .links{
   width: 100%;
   background-color: rgb(245, 245, 245);
+  
   .links-inner{
     display: grid;
-    -ms-grid-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
+    margin: 0 1.3rem ;
   }
   h3{
-    font-size: medium;
-    color: grey;
-    margin-bottom:0.5rem ;
+    font-size: 15px;
+    color: rgb(110, 110, 110);
+    margin-top:1.2rem ;
     padding-top: 1rem;
   }
   li{
@@ -222,30 +288,31 @@ ul {
 }
 /*Footer*/
 .footer{
-  
   background-color: rgb(245, 245, 245);
   padding: 2rem 0 1rem 2rem;
   .footer-inner{
     display: flex;
-    margin: 0.5rem 0 1rem 0;
+    margin: 0.5rem 0 0rem 1.5rem;
+    justify-content:space-between;
   }
-
+  .ch{
+    display: flex;
+    align-self:flex-start;
+    
+  }
   ul{
     display: flex;
-    float: right;
-    padding: 0.3rem 0 1rem 1.5rem;
-    li{
-      padding-right: 3.5rem ;
-    }
+    width: 55%;
+    padding: 0 0 1rem 1.5rem;
   }
-}
-
-
-
+    li{
+      padding-right: 2.5rem ;
+    }
+   
+  }
 
 
 @media(max-width:700px){
-
   .menu-btn{
     display: block;
   }
@@ -282,19 +349,29 @@ ul {
         border-bottom: 0;
       }
     }
+
   }
+
   ul.right-menu{
     margin-right: 3.5rem;
   }
-
   .btn{
     font-size: 1rem;
     padding: 0.6rem 0.9rem;
   }
+  .showcase{
+    h2{
+      width: 30%;
+    }
+    p{
+      display: none;
+    }
+  }
 
   .home-cards{
-    grid-template-columns: repeat(2,1fr);
-    -ms-grid-columns: 1fr 1fr;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
   }
 
 .xbox{
@@ -319,10 +396,8 @@ ul {
 .links{
   .links-inner{
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    -ms-grid-columns: 1fr 1fr 1fr;
-    grid-template-rows:repeat(2,1fr) ;
-    -ms-grid-columns: 1fr 1fr;
+    grid-template-columns:1fr 1fr 1fr;
+    grid-template-rows:1fr 1fr ;
     grid-gap: 20px;
 }
 }
@@ -330,8 +405,10 @@ ul {
   .footer-inner{
     display: flex;
     flex-wrap: wrap;
-  
-
+    ul{
+      display: flex;
+      flex-wrap: wrap;
+    }
     li{
       padding-right: 1rem ;
     }
@@ -350,8 +427,11 @@ ul {
     font-size: 0.8rem;
     padding: 0.5rem 0.7rem;
   .home-cards{
+    display: grid;
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
   }
+
   .xbox{
     .content{
      p{
@@ -373,10 +453,8 @@ ul {
   .links{
     .links-inner{
       display: grid;
-      grid-template-columns: repeat(1,1fr);
-      -ms-grid-columns: 1fr;
-      grid-template-rows:repeat(6,1fr) ;
-      -ms-grid-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr ;
+      grid-template-rows:1fr 1fr 1fr 1fr 1fr 1fr ;
       grid-gap: 20px;
   }
   }
@@ -384,7 +462,6 @@ ul {
     .footer-inner{
       display: flex;
       flex-wrap: wrap;
-      
       grid-gap: 10px;
     
     }
